2005-12-07  Christopher Faylor  <cgf@timesys.com>

	* hires.h (hires_ms::initime_ms): Delete.
	(hires_ms::initime_us): Just define as LONGLONG.
	(hires_ms::uptime): New function.
	* select.cc (select_stuff::wait): Use gtod for timing to attempt to
	avoid windows 32 bit wraparound.
	* times.cc (systime): New function.
	(times): Replace GetTickCount with gtod.uptime.
	(hires_us::prime): Use systime() to calculate system time rather than
	calling GetSystemTimeAsFileTime directly.
	(hires_ms::prime): Ditto.  Eliminate initime_ms.
	(hires_ms::usecs): Try harder to detect wraparound.

	* fhandler_proc.cc (format_proc_partitions): Set drive_size to zero to
	avoid a compiler warning.

2005-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (format_proc_partitions): Use modern IOCTLs
	to determine drive size as far as possible.

2005-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_raw.cc (fhandler_dev_raw::ioctl): Fix INVALID_PARAMETER
	condition.  Only copy devbuf to buf if buf is non-NULL.

2005-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_raw.cc (fhandler_dev_raw::ioctl): Fix setting devbuf
	when rd_parm is 0 or 1.

2005-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_floppy.cc (fhandler_dev_floppy::lseek): Fix test for
	valid file position at EOM.

2005-12-07  Christopher Faylor  <cgf@timesys.com>

	* include/cygwin/stdlib.h: Guard compilation of *unsetenv* in newlib.

2005-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* exceptions.cc (_cygtls::handle_exceptions): In case of a
	STATUS_ACCESS_VIOLATION, check if the page is a mmaped page beyond
	a file's EOF.  Generate SIGBUS instead of SIGSEGV then.
	* mmap.cc (__PROT_ATTACH): New define.
	(__PROT_FILLER): Ditto.
	(fh_anonymous): Rename from fh_paging_file;
	(fh_disk_file): New global static variable.
	(attached): New inline function.
	(filler): Ditto.
	(gen_create_protect): Split off from gen_protect to use the file's