@@ -1,3 +1,11 @@
+2005-12-08  Pekka Pessi <ppessi@gmail.com>
+	    Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_socket.cc (fhandler_socket::recvfrom): Mask flags with
+	MSG_WINMASK for Windows socket calls.
+	(fhandler_socket::recvmsg): Ditto.
+	(fhandler_socket::sendmsg): Ditto.
+
 2005-12-07  Christopher Faylor  <cgf@timesys.com>
 
 	* hires.h (hires_ms::initime_ms): Delete.
